--- a/estilo.css
+++ b/estilo.css
@@ -49,8 +49,9 @@ a{
 }
 h3{
     text-align: center;
-    font-size: ;
+    font-size: 18px;
     font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif ;
+    font-weight:bold ; 
 }
 span{
     font-weight: bold;
